[Feature] Portfolio images in the HTML

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,34 +1,34 @@
 - name: VCZ's experimental website
   description: A collection of tools by yours truly
-  imageID: i7
+  image: 7.png
   link: https://dev.vcz.fr
 
 - name: FontAwesome +
   description: FontAwesome icon picker and CSS generator
-  imageID: i1
+  image: 1.png
   link: https://app.izdev.fr/fa+
 
 - name: 2016
   description: Tiny multiplayer incremental game to wait for 2016
-  imageID: i2
+  image: 2.png
   link: https://stock.vcz.fr/2016
 
 - name: BDA ENSEIRB-MATMECA
   description: 2015 version of Bordeaux Graduate School of Engineering's Bureau des Arts website
-  imageID: i3
+  image: 3.png
   link: https://bda.eirb.fr
 
 - name: C.R.A.P.S.
   description: Website for Bordeaux INP's sports resource center
-  imageID: i4
+  image: 4.png
   link: "#"
 
 - name: France Unicycle Federation intranet
   description: Web application dedicated to the management of unicycle competitions in France
-  imageID: i5
+  image: 5.png
   link: "#"
 
 - name: 2015
   description: Loading screen for 2015
-  imageID: i6
+  image: 6.png
   link: https://stock.vcz.fr/2015
