--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,10 +1,20 @@
+- name: Meetup Notes
+  description: This site contains the notes transcribed from what I learn at my local meetups, with some additions to give more options to the readers, such as a link to the video, the slides, a reading time and a table of contents. The minimalistic interface is here to lead you to a distraction-free content.
+  image: 9.png
+  link: https://meetups.vcz.fr/
+
+- name: MDWS, by Moonda
+  description: MDWS is a product created by <a href="https://moonda.com/">Moonda</a> that generate websites following the parent company guidelines. The product is currently serving about 350 dealerships in Europe and counting. I have been the lead maintainer for this project between 2017 and 2019 and contributed to its AWS migration, technical debt reduction, technical optimizaitons through the addition of monitoring tools, configuration fine tuning, a CDN, etc.
+  image: 8.png
+  link: https://mydws.net
+
 - name: VCZ's experimental website
   description: A collection of tools by yours truly
   image: 7.png
   link: https://dev.vcz.fr
 
 - name: FontAwesome +
-  description: FontAwesome icon picker and CSS generator
+  description: FontAwesome 4 icon picker and CSS generator
   image: 1.png
   link: https://app.izdev.fr/fa+
 
@@ -18,7 +28,7 @@
   image: 3.png
   link: https://bda.eirb.fr
 
-- name: C.R.A.P.S.
+- name: Bordeaux INP's sports resource center
   description: Website for Bordeaux INP's sports resource center
   image: 4.png
   link: "#"
