feat!: Joining forces with this new website version

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,53 @@
-.vscode
-_site
-.sass-cache
-.jekyll-metadata
-.jekyll-cache/
+# Deny all
+*
+
+# Root files
+!/.gitignore
+!/README.md
+!/package.json
+!/bun.lockb
+
+# Jekyll
+!/_data/
+!/_data/*.yml/
+
+!/_posts/
+!/_posts/*/
+!/_posts/*/*.md
+
+!/_includes/
+!/_includes/partials/
+!/_includes/**/*.html
+
+!/_layouts/
+!/_layouts/*.html
+
+!/_sass/
+!/_sass/*.scss
+
+!/_config.yml
+!/404.md
+!/index.md
+
+# App files
+
+!/favicon.ico
+!/*.md
+
+!/functions/
+!/functions/api/
+!/functions/api/*.ts
+
+!/apps/
+!/apps/*/
+!/apps/*/script.js
+!/apps/*/index.md
+!/apps/nsfw/*
+!/apps/index.md
+
+!/blog/
+!/blog/all/
+!/blog/categories/
+!/blog/index.md
+!/blog/all/index.html
+!/blog/categories/*.md
