fix: Missing assets
reason: Forgot to update the .gitignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,20 @@
 !/blog/index.md
 !/blog/all/index.html
 !/blog/categories/*.md
+
+!/assets/
+!/assets/css/
+!/assets/css/global.scss
+!/assets/font/
+!/assets/font/*.woff
+!/assets/font/*.woff2
+!/assets/img/
+!/assets/img/portfolio/
+!/assets/img/posts/
+!/assets/img/posts/*/
+!/assets/img/**/*.avif
+!/assets/img/**/*.webp
+!/assets/img/**/*.png
+!/assets/img/**/*.jpg
+!/assets/resume/
+!/assets/resume/*.pdf
