--- a/.gitignore
+++ b/.gitignore
@@ -55,9 +55,11 @@
 !/slides/
 !/slides/*/
 !/slides/*/assets/
-!/slides/*/assets/*.avif
-!/slides/*/assets/*.svg
-!/slides/*/assets/*.gif
+!/slides/*/assets/**/
+!/slides/*/assets/**/*.avif
+!/slides/*/assets/**/*.png
+!/slides/*/assets/**/*.svg
+!/slides/*/assets/**/*.gif
 !/slides/index.md
 !/slides/*/index.html
 
