--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,8 @@
 !/assets/
 !/assets/css/
 !/assets/css/*.scss
+!/assets/js/
+!/assets/js/*.js
 !/assets/font/
 !/assets/font/*.woff
 !/assets/font/*.woff2
